gcloud/terraform/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-flask-service
  namespace: default
spec:
  selector:
    app: my-flask-app
  ports:
  - port: 5001
    targetPort: 5001
    protocol: TCP
  type: ClusterIP
