gcloud/terraform/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
spec:
  selector:
    app: my-nginx
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
  type: ClusterIP
  # type: NodePort ???? → https://cloud.google.com/kubernetes-engine/docs/tutorials/http-balancer?hl=es-419
